# agrosmart-ai

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.spaces  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  render.yaml  requests.http  requirements-dev.txt  requirements.txt  run.py  start.sh
.github/workflows/: ci.yml
app/: __init__.py  config.py  database.py  decision.py  deps.py  llm.py  main.py  ml.py  models.py  notifications.py  observability.py  schemas.py  security.py  voice.py
app/routers/: __init__.py  analytics.py  auth.py  ml.py  sensors.py
dashboard/: __init__.py  app.py
data/: metrics.json
docs/: ARCHITECTURE.md  DEMO_SCRIPT.md  DEPLOY.md  IMPACT.md  PITCH.md
scripts/: __init__.py  seed.py  simulate_sensor.py  train_model.py
tests/: __init__.py  conftest.py  test_auth.py  test_decision.py  test_ml.py  test_sensors.py
